<resources>
    <string name="success_title">Success</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="menu_preferences">Apex settings</string>
    <string name="menu_lock_desktop">Lock desktop</string>
    <string name="homescreen_settings_title">Homescreen settings</string>
    <string name="layout_title">Layout</string>
    <string name="portrait_grid_title">Portrait grid</string>
    <string name="landscape_grid_title">Landscape grid</string>
    <string name="horizontal_margin_title">Horizontal margin</string>
    <string name="vertical_margin_title">Vertical margin</string>
    <string name="manage_screens_title">Manage screens</string>
    <string name="manage_screens_summary">Add, remove, re-order, set default</string>
    <string name="scrolling_title">Scrolling</string>
    <string name="infinite_scrolling_title">Infinite scrolling</string>
    <string name="elastic_scrolling_title">Elastic scrolling</string>
    <string name="overscroll_effect_title">Overscroll effect</string>
    <string name="minimum_scrolling_time_title">Minimum scrolling time</string>
    <string name="minimum_scrolling_time_summary">Set the minimum time when scrolling through pages</string>
    <string name="minimum_scrolling_time_msg">"This option controls the minimum time it takes to transition from one page to another.

Zero is the default value. Otherwise, smaller values allows faster scrolls."</string>
    <string name="transition_effect_title">Transition effect</string>
    <string name="wallpaper_title">Wallpaper</string>
    <string name="show_wallpaper_title">Show wallpaper</string>
    <string name="show_wallpaper_summary">Show wallpaper on desktop</string>
    <string name="wallpaper_mode_title">Wallpaper mode</string>
    <string name="indicator_title">Indicator</string>
    <string name="show_homescreen_indicator_title">Show desktop indicator</string>
    <string name="show_homescreen_indicator_summary">Show an indicator for which homescreen you are currently on</string>
    <string name="homescreen_indicator_position_title">Homescreen indicator position</string>
    <string name="fade_homescreen_indicator_title">Fade homescreen indicator</string>
    <string name="fade_homescreen_indicator_summary">Only show when sliding between screens</string>
    <string name="hide_element_title">Hide element</string>
    <string name="show_persistent_search_bar_title">Show persistent search bar</string>
    <string name="search_bar_style_title">Search bar style</string>
    <string name="hide_notification_bar_title">Hide notification bar</string>
    <string name="hide_notification_bar_summary">Do not show the status/notification bar</string>
    <string name="hide_shadows_title">Hide shadows</string>
    <string name="hide_shadows_summary">Do not show shadows at the top and bottom of the screen</string>
    <string name="hide_icon_labels_title">Hide icon labels</string>
    <string name="hide_icon_labels_summary">Do not show text labels under homescreen icons</string>
    <string name="drawer_settings_title">Drawer settings</string>
    <string name="dock_settings_title">Dock settings</string>
    <string name="folder_settings_title">Folder settings</string>
    <string name="behavior_settings_title">Behavior settings</string>
    <string name="swipe_up_title">Swipe up</string>
    <string name="swipe_down_title">Swipe down</string>
    <string name="theme_settings_title">Theme settings</string>
    <string name="advanced_settings_title">Advanced settings</string>
    <string name="customize_menu_title">Customize menu</string>
    <string name="customize_menu_summary">Show/hide menu items</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="notifications_title">Notifications</string>
    <string name="missed_call_count_title">Missed call count</string>
    <string name="missed_call_count_summary">Display the number of missed calls on phone icons</string>
    <string name="phone_app_title">Phone app</string>
    <string name="phone_app_summary">Select the app where you want the missed call count on</string>
    <string name="unread_sms_count_title">Unread SMS count</string>
    <string name="unread_sms_count_summary">Display the number of unread messages on messaging icons</string>
    <string name="sms_app_title">SMS app</string>
    <string name="sms_app_summary">Select the app where you want the unread SMS count on</string>
    <string name="unread_gmail_count_title">Unread Gmail count</string>
    <string name="unread_gmail_count_summary">Display the number of unread emails on Gmail icons (requires Gmail version 4.0.5 or higher)</string>
    <string name="gmail_app_title">Gmail app</string>
    <string name="gmail_app_summary">Select the app where you want the unread Gmail count on</string>
    <string name="widget_settings_title">Widget settings</string>
    <string name="resize_any_widget_title">Resize any widget</string>
    <string name="resize_any_widget_summary">Allow resizing of widgets that normally are not resizeable</string>
    <string name="overlapping_widgets_title">Overlapping widgets</string>
    <string name="overlapping_widgets_summary">Allow overlapping widgets while resizing</string>
    <string name="widgets_in_dock_title">Widgets in dock</string>
    <string name="widgets_in_dock_summary">Allow adding widgets (1x1 only) to dock</string>
    <string name="other_settings_title">Other settings</string>
    <string name="set_default_launcher_title">Set default launcher</string>
    <string name="not_set">Not set</string>
    <string name="select_language_title">Select language</string>
    <string name="keep_in_memory_title">Keep in memory</string>
    <string name="keep_in_memory_summary">Always keep Apex Launcher in memory to reduce redraws</string>
    <string name="enable_root_helper_title">Enable Root Helper</string>
    <string name="enable_root_helper_summary">Add widgets from drawer with root access</string>
    <string name="report_usage_errors_title">Report usage and errors</string>
    <string name="report_usage_errors_summary">Automatically send anoymous usage information and crash logs</string>
    <string name="backup_restore_title">Backup &amp; restore</string>
    <string name="apex_title">Apex</string>
    <string name="apex_launcher_pro_title">Apex Launcher Pro</string>
    <string name="restart_launcher_title">Restart Apex Launcher</string>
    <string name="edit_shortcut_info">You may modify the shortcut label, select a custom icon, or change the desired application activity to launch.</string>
    <string name="pick_activity">Pick an activity</string>
    <string name="default_label">Label</string>
    <string name="pref_homescreen_portrait_grid_default">0</string>
    <string name="pref_homescreen_landscape_grid_default">0</string>
    <string name="pref_homescreen_grid_min">2</string>
    <string name="pref_homescreen_grid_max">7</string>
    <string name="pref_homescreen_horizontal_margin_default">NONE</string>
    <string name="pref_homescreen_vertical_margin_default">NONE</string>
    <string name="pref_homescreen_infinite_scrolling_type_default">NONE</string>
    <string name="pref_minimum_scrolling_time_default">0</string>
    <string name="pref_minimum_scrolling_time_max">100</string>
    <string name="pref_homescreen_transition_effect_default">NONE</string>
    <string name="pref_wallpaper_mode_default">MULTIPLE_SCREEN</string>
    <string name="pref_homescreen_indicator_position_default">AUTO</string>
    <string name="pref_show_persistent_search_bar_default">LANDSCAPE_ONLY</string>
    <string name="pref_search_bar_style_default">JELLY_BEAN</string>
    <string name="pref_app_locale_default" />
    <string name="pref_manage_screens_key">manage_screens</string>
    <string name="pref_homescreen_portrait_grid_key">homescreen_portrait_grid</string>
    <string name="pref_homescreen_landscape_grid_key">homescreen_landscape_grid</string>
    <string name="pref_homescreen_horizontal_margin_key">homescreen_horizontal_margin</string>
    <string name="pref_homescreen_vertical_margin_key">homescreen_vertical_margin</string>
    <string name="pref_homescreen_infinite_scrolling_type_key">homescreen_infinite_scrolling_type</string>
    <string name="pref_homescreen_elastic_scrolling_key">homescreen_elastic_scrolling</string>
    <string name="pref_homescreen_overscroll_effect_key">homescreen_overscroll_effect</string>
    <string name="pref_homescreen_minimum_scrolling_time_key">homescreen_minimum_scrolling_time</string>
    <string name="pref_homescreen_transition_effect_key">homescreen_transition_effect</string>
    <string name="pref_show_wallpaper_key">show_wallpaper</string>
    <string name="pref_wallpaper_mode_key">wallpaper_mode</string>
    <string name="pref_show_homescreen_indicator_key">show_homescreen_indicator</string>
    <string name="pref_homescreen_indicator_position_key">homescreen_indicator_position</string>
    <string name="pref_fade_homescreen_indicator_key">fade_homescreen_indicator</string>
    <string name="pref_homescreen_hide_element_key">homescreen_hide_element</string>
    <string name="pref_show_persistent_search_bar_key">show_persistent_search_bar</string>
    <string name="pref_search_bar_style_key">search_bar_style</string>
    <string name="pref_hide_notification_bar_key">hide_notification_bar</string>
    <string name="pref_hide_shadows_key">hide_shadows</string>
    <string name="pref_hide_icon_labels_key">hide_icon_labels</string>
    <string name="pref_advanced_settings_key">advanced_settings</string>
    <string name="pref_menu_add_key">menu_add</string>
    <string name="pref_menu_wallpaper_key">menu_wallpaper</string>
    <string name="pref_menu_theme_key">menu_theme</string>
    <string name="pref_menu_search_key">menu_search</string>
    <string name="pref_menu_notifications_key">menu_notifications</string>
    <string name="pref_menu_manage_apps_key">menu_manage_apps</string>
    <string name="pref_menu_manage_screens_key">menu_manage_screens</string>
    <string name="pref_menu_preferences_key">menu_preferences</string>
    <string name="pref_menu_settings_key">menu_settings</string>
    <string name="pref_menu_lock_desktop_key">menu_lock_desktop</string>
    <string name="pref_menu_help_key">menu_help</string>
    <string name="pref_notifications_settings_key">notifications_settings</string>
    <string name="pref_missed_call_count_key">missed_call_count</string>
    <string name="pref_phone_app_key">phone_app</string>
    <string name="pref_unread_sms_count_key">unread_sms_count</string>
    <string name="pref_sms_app_key">sms_app</string>
    <string name="pref_unread_gmail_count_key">unread_gmail_count</string>
    <string name="pref_gmail_app_key">gmail_app</string>
    <string name="pref_widget_settings_key">widget_settings</string>
    <string name="pref_resize_any_widget_key">resize_any_widget</string>
    <string name="pref_overlapping_widgets_key">overlapping_widgets</string>
    <string name="pref_widgets_in_dock_key">widgets_in_dock</string>
    <string name="pref_set_default_launcher_key">set_default_launcher</string>
    <string name="pref_app_locale_key">app_locale</string>
    <string name="pref_keep_in_memory_key">keep_in_memory</string>
    <string name="pref_enable_root_helper_key">enable_root_helper</string>
    <string name="pref_enable_reporting_key">enable_reporting</string>
    <string name="menu_add">Add</string>
    <string name="menu_manage_apps">Manage apps</string>
    <string name="menu_wallpaper">Wallpaper</string>
    <string name="menu_search">Search</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_settings">System settings</string>
    <string name="menu_help">Help</string>
</resources>