<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/homescreen_settings_title"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/layout_title">
        <com.anddoes.launcher.preference.GridPickerPreference android:max="@string/pref_homescreen_grid_max" android:text="@string/pref_homescreen_grid_min" android:title="@string/portrait_grid_title" android:key="@string/pref_homescreen_portrait_grid_key" android:defaultValue="@string/pref_homescreen_portrait_grid_default" />
        <com.anddoes.launcher.preference.GridPickerPreference android:max="@string/pref_homescreen_grid_max" android:text="@string/pref_homescreen_grid_min" android:title="@string/landscape_grid_title" android:key="@string/pref_homescreen_landscape_grid_key" android:defaultValue="@string/pref_homescreen_landscape_grid_default" />
        <ListPreference android:entries="@array/margin_entries" android:title="@string/horizontal_margin_title" android:key="@string/pref_homescreen_horizontal_margin_key" android:defaultValue="@string/pref_homescreen_horizontal_margin_default" android:entryValues="@array/margin_values" />
        <ListPreference android:entries="@array/margin_entries" android:title="@string/vertical_margin_title" android:key="@string/pref_homescreen_vertical_margin_key" android:defaultValue="@string/pref_homescreen_vertical_margin_default" android:entryValues="@array/margin_values" />
        <Preference android:title="@string/manage_screens_title" android:key="@string/pref_manage_screens_key" android:summary="@string/manage_screens_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/scrolling_title">
        <ListPreference android:entries="@array/infinite_scrolling_entries" android:title="@string/infinite_scrolling_title" android:key="@string/pref_homescreen_infinite_scrolling_type_key" android:defaultValue="@string/pref_homescreen_infinite_scrolling_type_default" android:entryValues="@array/infinite_scrolling_values" />
        <CheckBoxPreference android:title="@string/elastic_scrolling_title" android:key="@string/pref_homescreen_elastic_scrolling_key" android:defaultValue="@bool/pref_homescreen_elastic_scrolling_default" android:summaryOn="@string/enabled" android:summaryOff="@string/disabled" />
        <CheckBoxPreference android:title="@string/overscroll_effect_title" android:key="@string/pref_homescreen_overscroll_effect_key" android:defaultValue="@bool/pref_homescreen_overscroll_effect_default" android:summaryOn="@string/enabled" android:summaryOff="@string/disabled" />
        <com.anddoes.launcher.preference.SeekBarPreference android:max="@string/pref_minimum_scrolling_time_max" android:text="" android:title="@string/minimum_scrolling_time_title" android:key="@string/pref_homescreen_minimum_scrolling_time_key" android:summary="@string/minimum_scrolling_time_summary" android:defaultValue="@string/pref_minimum_scrolling_time_default" android:dialogMessage="@string/minimum_scrolling_time_msg" />
        <ListPreference android:entries="@array/transition_effect_entries" android:title="@string/transition_effect_title" android:key="@string/pref_homescreen_transition_effect_key" android:defaultValue="@string/pref_homescreen_transition_effect_default" android:entryValues="@array/transition_effect_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/wallpaper_title">
        <CheckBoxPreference android:title="@string/show_wallpaper_title" android:key="@string/pref_show_wallpaper_key" android:summary="@string/show_wallpaper_summary" android:defaultValue="@bool/pref_show_wallpaper_default" />
        <ListPreference android:entries="@array/wallpaper_mode_entries" android:title="@string/wallpaper_mode_title" android:key="@string/pref_wallpaper_mode_key" android:dependency="@string/pref_show_wallpaper_key" android:defaultValue="@string/pref_wallpaper_mode_default" android:entryValues="@array/wallpaper_mode_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/indicator_title">
        <CheckBoxPreference android:title="@string/show_homescreen_indicator_title" android:key="@string/pref_show_homescreen_indicator_key" android:summary="@string/show_homescreen_indicator_summary" android:defaultValue="@bool/pref_show_homescreen_indicator_default" />
        <ListPreference android:entries="@array/homescreen_indicator_position_entries" android:title="@string/homescreen_indicator_position_title" android:key="@string/pref_homescreen_indicator_position_key" android:dependency="@string/pref_show_homescreen_indicator_key" android:defaultValue="@string/pref_homescreen_indicator_position_default" android:entryValues="@array/homescreen_indicator_position_values" />
        <CheckBoxPreference android:title="@string/fade_homescreen_indicator_title" android:key="@string/pref_fade_homescreen_indicator_key" android:summary="@string/fade_homescreen_indicator_summary" android:dependency="@string/pref_show_homescreen_indicator_key" android:defaultValue="@bool/pref_fade_homescreen_indicator_default" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/hide_element_title" android:key="@string/pref_homescreen_hide_element_key">
        <ListPreference android:entries="@array/show_persistent_search_bar_entries" android:title="@string/show_persistent_search_bar_title" android:key="@string/pref_show_persistent_search_bar_key" android:defaultValue="@string/pref_show_persistent_search_bar_default" android:entryValues="@array/show_persistent_search_bar_values" />
        <ListPreference android:entries="@array/search_bar_style_entries" android:title="@string/search_bar_style_title" android:key="@string/pref_search_bar_style_key" android:defaultValue="@string/pref_search_bar_style_default" android:entryValues="@array/search_bar_style_values" />
        <CheckBoxPreference android:title="@string/hide_notification_bar_title" android:key="@string/pref_hide_notification_bar_key" android:summary="@string/hide_notification_bar_summary" android:defaultValue="@bool/pref_hide_notification_bar_default" />
        <CheckBoxPreference android:title="@string/hide_shadows_title" android:key="@string/pref_hide_shadows_key" android:summary="@string/hide_shadows_summary" android:defaultValue="@bool/pref_hide_shadows_default" />
        <CheckBoxPreference android:title="@string/hide_icon_labels_title" android:key="@string/pref_hide_icon_labels_key" android:summary="@string/hide_icon_labels_summary" android:defaultValue="@bool/pref_hide_icon_labels_default" />
    </PreferenceCategory>
</PreferenceScreen>
