<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="center" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/swipe_up_title" />
        <Spinner android:entries="@array/action_entries" android:id="@id/swipe_up_action" android:layout_width="fill_parent" android:layout_height="wrap_content" android:prompt="@string/swipe_up_title" android:entryValues="@array/action_values" />
        <TextView android:id="@id/swipe_up_action_detail" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/swipe_down_title" />
        <Spinner android:entries="@array/action_entries" android:id="@id/swipe_down_action" android:layout_width="fill_parent" android:layout_height="wrap_content" android:prompt="@string/swipe_down_title" android:entryValues="@array/action_values" />
        <TextView android:id="@id/swipe_down_action_detail" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </LinearLayout>
    <View android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" style="@android:style/Holo.ButtonBar.AlertDialog">
        <Button android:id="@id/cancel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/btn_cancel" android:layout_weight="1.0" style="@android:style/Widget.Holo.Button.Borderless.Small" />
        <Button android:id="@id/ok" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/btn_ok" android:layout_weight="1.0" style="@android:style/Widget.Holo.Button.Borderless.Small" />
    </LinearLayout>
</LinearLayout>
